# HELL-NOT

./: CMakeLists.txt  README.md  README_ua.md
examples/: main.cpp
include/hellnah/Core/: DbHeader.h  Id.h  RecordHeader.h  WorkFile.h
include/hellnah/Engine/: Database.h  Table.h
include/hellnah/Storage/: FileManager.h  FileStorage.h  IFileManager.h  IdManager.h
src/Core/: Id.cpp  WorkFile.cpp
src/Engine/: Database.cpp
src/Storage/: FileStorage.cpp
tests/: test.cpp
